# MyPortfolioSPA

./: .env.example  .gitignore  NOTES.md  README.md  docker-compose.yml  render.yaml
backend/: .env.expample  Dockerfile  Procfile  README.md  backup_db.json  build.sh  create_superuser.py  entrypoint.sh  gunicorn.conf.py  pyproject.toml
backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api/fixtures/: backup_db.json
backend/api/migrations/: 0001_initial.py
backend/portfolio_backend/: settings.py  urls.py
backend/utils/: new_visit.py
frontend/: README.md  package-lock.json  package.json
frontend/nginx/: nginx.conf
frontend/src/: App.css  App.tsx  index.css  types.ts
nginx/: default.conf
nginx/conf.d/: default.conf
portfolio_backend/: Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
portfolio_backend/apps/blog/: serializers.py  urls.py  views.py
portfolio_backend/apps/blog/fixtures/: blog.json
portfolio_backend/apps/contacts/: models.py  serializers.py  urls.py  views.py
portfolio_backend/apps/contacts/fixtures/: contacts.json
portfolio_backend/apps/projects/: models.py  serializers.py  urls.py  views.py
portfolio_backend/apps/projects/fixtures/: projects.json
portfolio_backend/nginx/: default.conf
portfolio_backend/portfolio_backend/: settings.py  urls.py
portfolio_frontend/: Docker-compose.yml  Dockerfile  docker-compose.override.yml  package.json  vite.config.ts
portfolio_frontend/nginx/: nginx.conf
portfolio_frontend/services/: api.ts
portfolio_frontend/src/: App.tsx
(+23 files in other folders)
